--- a/app/assets/stylesheets/smartrent/layout.css
+++ b/app/assets/stylesheets/smartrent/layout.css
@@ -138,14 +138,14 @@ label{
 
 .header .fixedWidth .searchOptions #special-nav a,
 .header .fixedWidth .searchOptions #special-nav a:visited{
-  background:#dde0e3 url(/bg-special-nav.gif) no-repeat top right;
+  background:#dde0e3 url(../images/bg-special-nav.gif) no-repeat top right;
   font-size:15px;
   line-height:26px;
   color:#000;
   text-decoration:none;
 }
 .header .fixedWidth .searchOptions #special-nav .arrow a{
-  background-image:url(/bg-special-nav-arrow.png)
+  background-image:url(../images/bg-special-nav-arrow.png)
 }
 .header .fixedWidth .searchOptions #special-nav a:hover,#special-nav li:hover a{
   background-color:#c2c6ca;
@@ -169,7 +169,7 @@ label{
 }
 
 .dropshadow{
-  background:url("/bannerGradient.gif") bottom left repeat-x;
+  background:url("../images/bannerGradient.gif") bottom left repeat-x;
   padding-bottom:3px;
 }
 
@@ -262,7 +262,7 @@ label{
   position:absolute;
   bottom:-55px;
   color:#000;
-  background:url(/carousel-caption-bg.png);
+  background:url(../images/carousel-caption-bg.png);
   height:70px;
   padding: 10px 12px;
   font-size:0.8125em;
@@ -288,7 +288,7 @@ label{
   position:absolute;
   bottom:0px;
   right:0px;
-  background:url(/slide_next.jpg) no-repeat;
+  background:url(../images/slide_next.jpg) no-repeat;
   width:36px;
   height:30px;
   font-size: 0;
@@ -299,7 +299,7 @@ label{
   position:absolute;
   bottom:0px;
   left:0px;
-  background:url(/slide_prev.jpg) no-repeat;
+  background:url(../images/slide_prev.jpg) no-repeat;
   width:36px;
   height:30px;
   font-size: 0;
@@ -310,7 +310,7 @@ label{
 #slides .pagination{
   height:30px;
   list-style:none;
-  background:url(/pagination_background.jpg) repeat-x;
+  background:url(../images/pagination_background.jpg) repeat-x;
   text-align:center;
 }
 
@@ -556,7 +556,7 @@ label{
   max-width:966px;
 }
 #seconderyNav {
-  background-image:url(/findAptsBG.gif);
+  background-image:url(../images/findAptsBG.gif);
   background-repeat:repeat-x;
   height:78px;
 }
@@ -672,7 +672,7 @@ label{
 .locations .location .stateBox{
   width:100%;
   cursor:pointer;
-  background:url("/gradient.png") top left repeat-x #f3f5f5;
+  background:url("../images/gradient.png") top left repeat-x #f3f5f5;
 }
 
 .locations .location .stateBox .state{
@@ -708,7 +708,7 @@ label{
   line-height:54px;
   text-align:center;
   color:#797a7b;
-  background:url("/gradient.png") top left repeat-x #f5f7f7;
+  background:url("../images/gradient.png") top left repeat-x #f5f7f7;
 }
 
 .locations .location .cities{
@@ -723,7 +723,7 @@ label{
   font-size:.9em;
   text-transform:uppercase;
   cursor:pointer;
-  background:url("/gradient.png") top left repeat-x #f3f4f5;
+  background:url("../images/gradient.png") top left repeat-x #f3f4f5;
 }
 
 .locations .location .cities .title:hover{
@@ -777,7 +777,7 @@ label{
 .locations .location .counties .title{
   color:#000000;
   width:100%;
-  background:url("/gradient.png") top left repeat-x #f3f4f5;
+  background:url("../images/gradient.png") top left repeat-x #f3f4f5;
   font-size:.9em;
   text-transform:uppercase;
   cursor:pointer;
@@ -801,7 +801,7 @@ label{
   line-height:29px;
   text-align:center;
   color:#797a7b;
-  background:url("/gradient.png") top left repeat-x #f5f7f7;
+  background:url("../images/gradient.png") top left repeat-x #f5f7f7;
 }
 
 .locations .location .counties ul{
@@ -951,7 +951,7 @@ label{
 .locations .results .propertyListing .info .learn a{
   color:#4c4c4c;
   text-decoration:none;
-  background:url("/smallLeftArrow.png") center left no-repeat;
+  background:url("../images/smallLeftArrow.png") center left no-repeat;
   padding-left:7px;
 }
 
@@ -1263,7 +1263,7 @@ label{
 
 .toggle{
   width:100%;
-  background:url("/toggleGradient.png") bottom left repeat-x;
+  background:url("../images/toggleGradient.png") bottom left repeat-x;
   margin-bottom:10px;
 }
 
@@ -1276,19 +1276,19 @@ label{
 }
 
 .toggle .listOn{
-  background:url("/listBackOn.gif") top left no-repeat;
+  background:url("../images/listBackOn.gif") top left no-repeat;
 }
 
 .toggle .listOff{
-  background:url("/listBackOff.gif") top left no-repeat;
+  background:url("../images/listBackOff.gif") top left no-repeat;
 }
 
 .toggle .mapOn{
-  background:url("/mapBackOn.gif") top left no-repeat;
+  background:url("../images/mapBackOn.gif") top left no-repeat;
 }
 
 .toggle .mapOff{
-  background:url("/mapBackOff.gif") top left no-repeat;
+  background:url("../images/mapBackOff.gif") top left no-repeat;
 }
 
 .toggle .item .text{
@@ -1819,7 +1819,7 @@ label{
 }
 .modern-checkbox li label:after {
   content:"";
-  background: url(/checkbox-large-dark.png) no-repeat;
+  background: url(../images/checkbox-large-dark.png) no-repeat;
   background-size: contain;
   opacity: 0;
   transition: 0.2s;
