--- a/app/assets/stylesheets/smartrent/application.css.erb
+++ b/app/assets/stylesheets/smartrent/application.css.erb
@@ -11,9 +11,6 @@
  * file per style scope.
  *
  *= require_self
- *= require bootstrap_and_overrides
- *= require smartrent/bootstrap
- *= require smartrent/bootstrap-theme
  *= require smartrent/layout
- *= require_tree .
+ * require_tree .
  */
