--- a/app/assets/stylesheets/smartrent/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/smartrent/bootstrap_and_overrides.css
@@ -1,7 +1,8 @@
 /*
-  =require twitter-bootstrap-static/bootstrap
+   =require /Users/talal/.rvm/gems/ruby-2.1.3/gems/twitter-bootstrap-rails-2.2.8/app/assets/stylesheets/twitter-bootstrap-static/boostrap
 
   Use Font Awesome icons (default)
   To use Glyphicons sprites instead of Font Awesome, replace with "require twitter-bootstrap-static/sprites"
-  =require twitter-bootstrap-static/fontawesome
+  =require /Users/talal/.rvm/gems/ruby-2.1.3/gems/twitter-bootstrap-rails-2.2.8/app/assets/stylesheets/twitter-bootstrap-static/fontawesome
   */
+
