contact page done

--- a/app/views/layouts/smartrent/_header.html.erb
+++ b/app/views/layouts/smartrent/_header.html.erb
@@ -27,7 +27,7 @@
 
     <div class="searchOptions clearfix">
       <div class="contactLink">
-        <%= link_to "Learn More", contact_path %>
+        <%= link_to "Learn More", new_contact_path %>
       </div>
 
       <div class="memberInfo">
