--- a/app/assets/stylesheets/smartrent/application.css.erb
+++ b/app/assets/stylesheets/smartrent/application.css.erb
@@ -11,6 +11,8 @@
  * file per style scope.
  *
  *= require_self
+ *= require smartrent/bootstrap
+ *= require smartrent/bootstrap-theme
  *= require smartrent/layout
  * require_tree .
  */
