--- a/app/assets/stylesheets/smartrent/layout.css.erb
+++ b/app/assets/stylesheets/smartrent/layout.css.erb
@@ -1,9 +1,9 @@
 @font-face{
   font-family:'FontSite Sans';
-  src:url(<%= asset_path "FontSiteSans-LightCd-webfont.eot" %>);
-  src:local('?'),url(<%= asset_path "FontSiteSans-LightCd-webfont.woff" %>) format('woff'),
-      url(<%= asset_path "FontSiteSans-LightCd-webfont.ttf" %>) format('truetype'),
-      url('<%= asset_path "FontSiteSans-LightCd-webfont.svg#webfont2X6HCJ0U" %>') format('svg');
+  src:url(<%= font_path "FontSiteSans-LightCd-webfont.eot" %>);
+  src:local('?'),url(<%= font_path "FontSiteSans-LightCd-webfont.woff" %>) format('woff'),
+      url(<%= font_path "FontSiteSans-LightCd-webfont.ttf" %>) format('truetype'),
+      url('<%= font_path "FontSiteSans-LightCd-webfont.svg#webfont2X6HCJ0U" %>') format('svg');
       font-weight:normal;font-style:normal}
 
 img{
