--- a/app/views/smartrent/properties/_form.html.erb
+++ b/app/views/smartrent/properties/_form.html.erb
@@ -16,6 +16,14 @@
     <%= f.text_field :title %>
   </div>
   <div class="field">
+    <%= f.label :video_url %><br />
+    <%= f.url_field :video_url %>
+  </div>
+  <div class="field">
+    <%= f.label :phone_number %><br />
+    <%= f.text_field :phone_number %>
+  </div>
+  <div class="field">
     <%= f.label :address %><br />
     <%= f.text_area :address %>
   </div>
