--- a/app/views/smartrent/properties/show.html.erb
+++ b/app/views/smartrent/properties/show.html.erb
@@ -12,7 +12,7 @@
       <h1><%= @property.title %></h1>
 
       <div class="address">
-        <%= @property.address %>
+        <%= @property.address %>, <%= @property.city %>, <%= @property.state %>
       </div>
 
       <div class="links">
