--- a/app/views/smartrent/pages/home.html.erb
+++ b/app/views/smartrent/pages/home.html.erb
@@ -33,8 +33,8 @@
           <div class="threeWide">
           <% end %>
             <div class="propertySlide">
-              <%= link_to properties_path(property) do %>
-                <%= image_tag property.left_image %>
+              <%= link_to property_path(property) do %>
+                <%= image_tag property.left_image(:home_page) %>
                 <div class="caption">
                   <strong><%= property.title %></strong> In every way, <%= property.title %> is truly the place to be.
                 </div>
