--- a/app/views/smartrent/properties/_form.html.erb
+++ b/app/views/smartrent/properties/_form.html.erb
@@ -25,11 +25,27 @@
   </div>
   <div class="field">
     <%= f.label :address %><br />
-    <%= f.text_area :address %>
+    <%= f.text_field :address %>
+  </div>
+  <div class="field">
+    <%= f.label :city %><br />
+    <%= f.text_field :city %>
+  </div>
+  <div class="field">
+    <%= f.label :state %><br />
+    <%= f.text_field :state %>
   </div>
   <div class="field">
     <%= f.label :website %><br />
     <%= f.text_field :website %>
+  </div>
+  <div class="field">
+    <%= f.label :home_page_desc %><br />
+    <%= f.text_field :home_page_desc %>
+  </div>
+  <div class="field">
+    <%= f.label :search_page_sub_title %><br />
+    <%= f.text_field :search_page_sub_title %>
   </div>
   <div class="field">
     <%= f.label :description %><br />
