--- a/app/views/layouts/smartrent/application.html.erb
+++ b/app/views/layouts/smartrent/application.html.erb
@@ -4,6 +4,7 @@
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= stylesheet_link_tag    "smartrent/application", media: "all" %>
+    <%= javascript_include_tag :defaults %>
     <%= javascript_include_tag "smartrent/application" %>
     <%= csrf_meta_tags %>
     <link rel="canonical" href="http://www.bozzutosmartrent.com/">
