--- a/app/views/layouts/smartrent/_header.html.erb
+++ b/app/views/layouts/smartrent/_header.html.erb
@@ -54,10 +54,32 @@
               <%= link_to "Activate Your Account", new_unlock_path(:user) %><br />
               </div>
           </div>
-        </div>
         <% else %>
-          <%= link_to "Logout", destroy_user_session_path  %>
+          <div class="title">
+            Logged-In
+          </div>
+          <div class="name">
+            <%= current_user.name %>
+          </div>
+          <div class="links">
+            <div class="link">
+              <%= link_to "View Your Profile", member_profile_path  %>
+            </div>
+
+            <div class="link">
+              <%= link_to "View Your Statement", ""  %>
+            </div>
+
+            <div class="link">
+              <%= link_to "Reset Password", edit_user_password_path  %>
+            </div>
+
+            <div class="link">
+              <%= link_to "Logout", destroy_user_session_path  %>
+            </div>
+          </div>
         <% end %>
+        </div>
       <% end %>
 
       <ul id="special-nav">
