member statement done

--- a/app/views/layouts/smartrent/_header.html.erb
+++ b/app/views/layouts/smartrent/_header.html.erb
@@ -67,7 +67,7 @@
             </div>
 
             <div class="link">
-              <%= link_to "View Your Statement", ""  %>
+              <%= link_to "View Your Statement", member_statement_path  %>
             </div>
 
             <div class="link">
