--- a/app/views/smartrent/pages/home.html.erb
+++ b/app/views/smartrent/pages/home.html.erb
@@ -25,27 +25,6 @@
       choose to participate in SmartRent or not.
       <%= link_to "Click here to learn more.", faq_path  %>
     </div>
-    <div id="slides">
-      <div class="slides_container">
-          <% i = 0 %>
-        <% Smartrent::Property.all.each do |property|%>
-          <% if i%2 == 0 %>
-          <div class="threeWide">
-          <% end %>
-            <div class="propertySlide">
-              <%= link_to property_path(property) do %>
-                <%= image_tag property.left_image(:home_page) %>
-                <div class="caption">
-                  <strong><%= property.title %></strong> In every way, <%= property.title %> is truly the place to be.
-                </div>
-              <% end %>
-            </div>
-          <% i+=1 %>
-          <% if i%2 == 0 %>
-          </div>
-          <% end %>
-        <% end %>
-      </div>
-    </div>
+    <%= render partial: "properties_slider" %>
   </div>
 </section>
