--- a/app/views/smartrent/apartments/_filters.html.erb
+++ b/app/views/smartrent/apartments/_filters.html.erb
@@ -1,5 +1,7 @@
 <div id="contactLeft">
   <div id="search">
+    <%= search_form_for @q do |f|%>
+    <% end %>
     <form id="propform" method="get" name="propform">
       <div class="searchTitle">
         <h1>Search By</h1>
@@ -11,15 +13,15 @@
         </div>
 
         <ul>
-          <li><input id="studios" name="bedrooms[]" onclick="selectResults();" type="checkbox" value="0"><label for="studios">Studios</label></li>
+          <li><input id="studios" name="studio_price_present" onclick="selectResults();" type="checkbox" value="0"><label for="studios">Studios</label></li>
 
-          <li><input id="onebed" name="bedrooms[]" onclick="selectResults();" type="checkbox" value="1"><label for="onebed">1 Bedrooms</label></li>
+          <li><input id="onebed" name="one_bedroom_price_present" onclick="selectResults();" type="checkbox" value="1"><label for="onebed">1 Bedrooms</label></li>
 
-          <li><input id="twobed" name="bedrooms[]" onclick="selectResults();" type="checkbox" value="2"><label for="twobed">2 Bedrooms</label></li>
+          <li><input id="twobed" name="two_bedroom_price_present" onclick="selectResults();" type="checkbox" value="2"><label for="twobed">2 Bedrooms</label></li>
 
-          <li><input id="threebed" name="bedrooms[]" onclick="selectResults();" type="checkbox" value="3"><label for="threebed">3 or more Bedrooms</label></li>
+          <li><input id="threebed" name="three_bedroom_price_present" onclick="selectResults();" type="checkbox" value="3"><label for="threebed">3 or more Bedrooms</label></li>
 
-          <li><input id="fourbed" name="penthouse" onclick="selectResults();" type="checkbox" value="true"><label for="fourbed">Penthouses</label></li>
+          <li><input id="fourbed" name="four_bedroom_price_present"" onclick="selectResults();" type="checkbox" value="true"><label for="fourbed">Penthouses</label></li>
         </ul>
       </div>
 
