--- a/app/views/smartrent/users/statement.html.erb
+++ b/app/views/smartrent/users/statement.html.erb
@@ -1,5 +1,18 @@
 <div class="member clearfix">
   <div class="memberStatementLeft">
+    <div class="saveTitle">
+    </div>
+
+    <div class="saveSubTitle">
+      Wow, that's pretty good. Here's what you can do with it.
+    </div>
+
+    <div class="video">
+      <%= image_tag "moviePlaceHolder.jpg" %>
+    </div>
+
+    <div id="contentWrapper">
+    </div>
   </div>
 
   <div class="memberStatementRight">
