--- a/app/views/smartrent/users/statement.html.erb
+++ b/app/views/smartrent/users/statement.html.erb
@@ -12,6 +12,9 @@
     </div>
 
     <div id="contentWrapper">
+      <div class="fixedWidth">
+        <%= render partial: "smartrent/pages/properties_slider" %>
+      </div>
     </div>
   </div>
 
