fixed the div problem

--- a/app/views/smartrent/pages/_properties_slider.html.erb
+++ b/app/views/smartrent/pages/_properties_slider.html.erb
@@ -14,7 +14,7 @@
           <% end %>
         </div>
       <% i+=1 %>
-      <% if i%2 == 0 %>
+      <% if i%2 == 0 || Smartrent::Property.all.count == 1 %>
       </div>
       <% end %>
     <% end %>
