statement changes done

--- a/app/views/smartrent/users/statement.html.erb
+++ b/app/views/smartrent/users/statement.html.erb
@@ -1,6 +1,7 @@
 <div class="member clearfix">
   <div class="memberStatementLeft">
     <div class="saveTitle">
+      <span class="lightBlue"><%= current_user.name %>,</span> You have <span class="lightBlue"><%= number_to_currency current_user.total_saved %></span> Saved.
     </div>
 
     <div class="saveSubTitle">
